# QuantumOS

./: QOS_开发计划_chatgpt.md  QOS_开发计划_gemini.md  QuantumOS 多智能体协同开发计划.md  QuantumOS.md  README.md  TASK_BOARD.md  business_plan.md  generate_alternatives.py  generate_patent_diagrams.py  generate_surface_code_gif.py  generate_vqe_workflow.py  package-lock.json  package.json  prompt.md  stepbystep.md  validate_api.py  validate_schema.py
compiler_llvm/: CMakeLists.txt  qisa_parser
compiler_llvm/src/: qisa_parser.cpp
dashboard/: app.py  index.html
docs/spec/: api_contract_v1.json  device_spec_v0.json  qisa_v0.md
hal_drivers/: CMakeLists.txt  mock_driver_test
hal_drivers/include/: qhal_driver.hpp
hal_drivers/src/: mock_driver.cpp  test_hal.cpp
kernel_rust/: Cargo.toml
kernel_rust/src/: api.rs  lib.rs  main.rs  qubit.rs  scheduler.rs
q_sim/: requirements.txt  sim_server.py  test_sim.py  test_sim_server.py  virtual_backend.py
q_sim/sdk_python/: example.py
q_sim/sdk_python/spectrum_os/: core.py
